<package>
  <name>example0</name>
  <author email="someone@somewhere.com">someone</author>
  <maintainer email="someone@somewhere.com">someone</maintainer>
  <version>0.1.0</version>
  <description>
      the example0 package
  </description>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>visualization_msgs</run_depend>
  
</package>
